# BLAFS

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile  README.md  SECURITY.md  dev.sh  go.mod  go.sum  main.go
.github/workflows/: main.yml
_docker/: Dockerfile  build.sh
_docker/dev/: Dockerfile
_docker/release/: Dockerfile  build.sh
examples/: README.md  debloat.py
examples/file_reader/_docker/: Dockerfile  build.sh
examples/memcached/: config.yml  workloads.py
examples/pytorch_inference/: config.yml  inference.py  workloads.py
examples/redis/: config.yml  workloads.py
examples/shared_layers/: CMakeLists.txt  main.cc
examples/shared_layers/_docker/: build.sh
examples/shared_layers/_docker/base/: Dockerfile  file_reader
examples/shared_layers/_docker/layer_a/: Dockerfile
examples/shared_layers/_docker/layer_b/: Dockerfile
fs/: CMakeLists.txt
fs/include/: baffs.h  debloated_fs.h  util.h
fs/src/: debloated_fs.cc  main.cc  util.cc  util_test.cc
internal/builder/: builder.go  builder_test.go
internal/image/: image.go  image_test.go
internal/mount/: mount.go  mount_test.go
internal/util/: util.go
kubernetes/: Dockerfile  Makefile  README.md  podeventlistener.sh  test.sh  writepipe.yaml
kubernetes/scripts/: unbloatpipe  unbloatpipe.service
tests/: test.sh
